# site

./: .gitignore  README.md  animes.json  pyproject.toml
app/: main.py
app/routes/: home.py
scripts/: googlesearchlinks.py  listanimes.json
static/CSS/: style.css
templates/: home.html
templates/layouts/: base.html
